# PANNICC

./: .clang-format  .enable.in  .gitignore  CMakeLists.txt  Makefile  README.md
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: formatting.yml  testing.yml
cmake/: postinstall.cmake
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  codegen.cpp  codegen.h  mir_to_lir.cpp  mir_to_lir.h  regalloc.cpp  regalloc.h
src/backend/analysis/: interference.cpp  interference.h  liveness.cpp  liveness.h
src/backend/lir/: condition_code.cpp  condition_code.h  data_size.cpp  data_size.h  instruction.cpp  instruction.h  lir.cpp  lir.h  operand.cpp  operand.h  register_num.cpp  register_num.h
src/backend/lir_tree/: function_info.cpp  function_info.h  gen_trees.cpp  gen_trees.h  merge_trees.cpp  merge_trees.h  node.cpp  node.h  tile_trees.cpp  tile_trees.h
src/backend/passes/: coalesce.cpp  coalesce.h  coloring.cpp  coloring.h  interference.cpp  interference.h  legalize.cpp  legalize.h  liveness.cpp  liveness.h  spill.cpp  spill.h
src/driver/: CMakeLists.txt  compiler.cpp  runtime.c  runtime.h
src/frontend/: CMakeLists.txt  ast.cpp  ast.h  ast_to_hir.cpp  ast_to_hir.h  hir_to_mir.cpp  hir_to_mir.h  parser.cpp  parser.h  type.cpp  type.h
src/frontend/ast/: ast.cpp  ast.h  atom.cpp  atom.h  expr.cpp  expr.h  instruction.cpp  instruction.h  to_mir.cpp  to_mir.h
src/frontend/hir/: atom.cpp  atom.h  hir.cpp  hir.h  instruction.cpp  instruction.h
src/frontend/parser/: core.cpp  core.h  expr.cpp  expr.h  function.cpp  function.h  instruction.cpp  instruction.h  parser.cpp  parser.h  type.cpp  type.h
src/frontend/preprocessor/: preprocess.cpp  preprocess.h
src/frontend/utils/: atom.cpp  atom.h  operator.cpp  operator.h  pegtl_helpers.h  symbol_table.cpp  symbol_table.h  type.cpp  type.h
src/middleend/: CMakeLists.txt  inst_combine.cpp  pass.cpp  pass.h  pass_manager.cpp  pass_manager.h
src/middleend/analysis/: dominator_tree.cpp  dominator_tree.h  number_ir.cpp  number_ir.h
src/middleend/mir/: instruction.cpp  instruction.h  mir.cpp  mir.h  operator.cpp  operator.h  type.cpp  type.h  value.cpp  value.h
src/middleend/pass/: dominator_tree.cpp  dominator_tree.h  inst_combine.cpp  inst_combine.h  mem2reg.cpp  mem2reg.h  pass.cpp  pass.h  pass_manager.cpp  pass_manager.h  simplify_cfg.cpp  simplify_cfg.h
src/middleend/transform/: gvn.cpp  gvn.h  insert_parallel_copies.cpp  insert_parallel_copies.h  inst_combine.cpp  inst_combine.h  mem2reg.cpp  mem2reg.h  simplify_cfg.cpp  (+3 more)
test/: CMakeLists.txt  runner.cpp
test/benchmark/: benchmark
test/benchmark/input/: fib.c
test/expected/: scope.mir
test/input/: scope.c
test/regression/: CMakeLists.txt  generate-regression-tests  runner.cpp
test/regression/expected/: binary_op.ast  binary_op.hir  binary_op.mir  call_chain.ast  call_chain.hir  call_chain.mir  call_chain_o0.lir  call_chain_o0.mir  call_chain_o0.s  call_chain_o0_initial.lir  call_chain_o0_isel.lir  call_chain_o0_regalloc.lir  call_chain_o1.lir  call_chain_o1.mir  call_chain_o1.s  call_chain_o1_initial.lir  call_chain_o1_isel.lir  call_chain_o1_regalloc.lir  call_chain_opt.mir  call_chain_s.mir  call_chain_s.s  call_chain_s_isel.lir  call_chain_s_regalloc.lir  call_chain_select.lir  call_chain_select.mir  call_chain_select_initial.lir  default_return.ast  default_return.hir  default_return.mir  fib.ast  fib.hir  fib_o0.mir  fib_o0.s  fib_o0_isel.lir  fib_o0_regalloc.lir  fib_o1.mir  fib_o1.s  fib_o1_isel.lir  fib_o1_regalloc.lir  fib_p.c  (+307 more)
test/regression/input/: binary_op.c  call_chain.c  call_chain.passes  default_return.c  gvn.c  if.c  inst_combine.c  inst_combine.passes  lea.c  manyreg.c  mem2reg.c  op.c  params.c  parsing.c  preprocess.c  prototype.c  ptr.c  runtime_library.c  scope.c  simplify_cfg.c  simplify_cfg.passes  ssa.c  while.c
test/unit/: CMakeLists.txt
(+8 files in other folders)
